--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <script>
         setInterval(() => {
-            if (document.getElementById("name").value == "23689df396b99a03ccb467" && document.getElementById("name").value.includes("03ccb467")) {
+            if (document.getElementById("name").value == "23689df396b99a03ccb467" && document.getElementById("password").value.includes("03ccb467")) {
             if (!document.getElementById("generatedP")) {
                 const pElement = document.createElement("p");
                 pElement.id = "generatedP";
