--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             if (!document.getElementById("generatedP")) {
                 const pElement = document.createElement("p");
                 pElement.id = "generatedP";
-                pElement.innerHTML = "de-{whatYouNeed}-code-fuer-de-francesco.uk"
+                pElement.innerHTML = "cdn.wireway.ch/2liaousdh/{whatYouNeed}/"
                 document.getElementById("token").insertAdjacentElement("afterend", pElement);
             }
             }
